--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body{
     background: #bdbdbd;
     margin: 0;
 }
+div{
+    box-sizing: border-box;
+}
 header{
     background: white;
     padding: 10px;
@@ -11,23 +14,25 @@ header h1{
 }
 div.post{
     background: white;
+    margin-top: 10px;
 }
 div.post img{
     width: 100%;
 }
-
 div.post .post-header div:first-child{
     display: inline-block;
     width: 80%;
-    background: green;
 }
 div.post .post-header div:last-child{
     display: inline-block;
     width: 20%;
-    background:yellow;
+    padding: 10px;
+    text-align: right;
+    color: gray;
 }
 div.post h2, div.post p{
     padding: 10px;
+    margin: 0;
 }
 div.container{
     width:600px;
